# MISO

./: .gitignore  .travis.yml  GFF.py  Gene.py  MANIFEST.in  Makefile  README  README.md  as_events.py  cluster_utils.py  colors.py  exon_utils.py  expected_psi_estimates.py  fastmiso.README  filter_events.py  hypothesis_test.py  index.html  index_gff.py  install.sh  json_utils.py  mim_sampler.py  miso  miso_sampler.py  module_availability.py  params.json  parse_csv.py  pe_utils.py  pickle_utils.py  plot_gene.py  plot_miso.py  plotting.py  profile_miso.py  psi_estimators.py  py2c_gene.py  read_simulator.py  reads_utils.py  readthedocs.yml  requirements.txt  rpkm_utils.py  run_events_analysis.py  (+11 more)
splicing/: .gitignore  DESCRIPTION  NAMESPACE  configure.in
splicing/R/: Rmiso.R  batch.R  convert.R  ident.R  package.R  plotter.R  sambam.R  simulator.R  solve.R
splicing/man/: GFF3.Rd  MISO.Rd  MISOresult.Rd  aaa-splicing-package.Rd  artificial.Rd  assignmentMatrix.Rd  complexity.Rd  downloadGTF.Rd  filter.Rd  matchIso.Rd  plotting.Rd  readfiles.Rd  reads.Rd  rpk.Rd  simulator.Rd  solveIso.Rd
splicing/src/: .gitignore  Makevars.in  Rsplicing.c  Rsplicing.h  reads.c
splicing/tests/: .gitignore  MISO.R  MISO.Rout.save  Trinity.R  Trinity.Rout.save  assignment.R  assignment.Rout.save  bias.R  condIso.R  condIso.Rout.save  constitutiveExons.R  constitutiveExons.Rout.save  estfraglen.R  estfraglen.Rout.save  filterReads.R  filterReads.Rout.save  gff.R  gff.Rout.save  linear-paired-bug.R  linear-paired-bug.Rout.save  matchIso.R  matchIso.Rout.save  maxiterations.R  mergeGFF3.R  (+27 more)
(+396 files in other folders)
